--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,48 @@ program/__pycache__/write_output_option1.cpython-310.pyc
 program/manage_csv/__pycache__/manage_lastfile.cpython-310.pyc
 program/manage_csv/__pycache__/write_output.cpython-310.pyc
 program/__pycache__/write_output_option2.cpython-310.pyc
+files_Option1/csv_inputs/fileBinCount.txt
+files_Option1/csv_inputs/fileBoxCount.txt
+files_Option1/csv_inputs/csv_bins/inputBins1.csv
+files_Option1/csv_inputs/csv_boxes/inputBoxes1.csv
+files_Option1/csv_outputs/fileOutCount.txt
+files_Option1/csv_outputs/lastBinFile.txt
+files_Option1/csv_outputs/lastBoxFile.txt
+files_Option1/csv_outputs/outputBins1.csv
+files_Option1/csv_outputs/outputFitted1.csv
+files_Option1/csv_outputs/outputSummary1.csv
+files_Option1/csv_outputs/outputUnfitted1.csv
+files_Option2/csv_inputs/fileBinCount.txt
+files_Option2/csv_inputs/fileBoxCount.txt
+files_Option2/csv_inputs/csv_bins/inputBins1.csv
+files_Option2/csv_inputs/csv_boxes/inputBoxes1.csv
+files_Option2/csv_outputs/fileOutCount.txt
+files_Option2/csv_outputs/lastBinFile.txt
+files_Option2/csv_outputs/lastBoxFile.txt
+files_Option2/csv_outputs/outputBins1.csv
+files_Option2/csv_outputs/outputFitted1.csv
+files_Option2/csv_outputs/outputSummary1.csv
+files_Option2/csv_outputs/outputUnfitted1.csv
+program/__pycache__/write_output_option1.cpython-311.pyc
+program/__pycache__/write_output_option2.cpython-311.pyc
+program/manage_csv/__pycache__/__init__.cpython-311.pyc
+program/manage_csv/__pycache__/constants.cpython-311.pyc
+program/manage_csv/__pycache__/input_parameters.cpython-311.pyc
+program/manage_csv/__pycache__/manage_filecount.cpython-311.pyc
+program/manage_csv/__pycache__/manage_lastfile.cpython-311.pyc
+program/manage_csv/__pycache__/prompts.cpython-311.pyc
+program/manage_csv/__pycache__/read_input_csv.cpython-311.pyc
+program/manage_csv/__pycache__/write_input_bin.cpython-311.pyc
+program/manage_csv/__pycache__/write_input_box.cpython-311.pyc
+program/manage_csv/__pycache__/write_output.cpython-311.pyc
+program/Option1_package/__pycache__/__init__.cpython-311.pyc
+program/Option1_package/__pycache__/auxiliary_methods.cpython-311.pyc
+program/Option1_package/__pycache__/constants.cpython-311.pyc
+program/Option1_package/__pycache__/main.cpython-311.pyc
+program/Option2_package/__pycache__/__init__.cpython-311.pyc
+program/Option2_package/__pycache__/auxiliary_methods.cpython-311.pyc
+program/Option2_package/__pycache__/bin.cpython-311.pyc
+program/Option2_package/__pycache__/constants.cpython-311.pyc
+program/Option2_package/__pycache__/item.cpython-311.pyc
+program/Option2_package/__pycache__/packer.cpython-311.pyc
+program/Option2_package/__pycache__/painter.cpython-311.pyc
